# MAI_DA

./: README.md
KP/3/: main.cpp
KP/5/: CMakeLists.txt  README.md
KP/5/src/: main.cpp
KP/5/src/Arifm/: Arifm.cpp  Arifm.h  Frequency.cpp  Frequency.h
KP/5/src/Dialog/: ArgParser.cpp  ArgParser.h  Dialog.cpp  Dialog.h  Exception.cpp  Exception.h
KP/5/src/Lzw/: Lzw.cpp  Lzw.h
KP/5/src/Utils/: BitStream.cpp  BitStream.h  Utils.cpp  Utils.h
lab1/: 1.txt  a.out  lab1_DA_report.tex  main.c  mainWithTime.c  task.c  tests.py
lab2/: 1.c  1.py  lab2_DA_report.tex  main.c  main.cpp  mainTime.cpp  stdMap.cpp  t.txt  task.cpp
lab2/benchmark/: .gitignore  benchmark.cpp  gen.c
lab4/: ZFuncCompare.cpp  gen.cpp  main.cpp
lab5/: benchmark.cpp  gen.cpp  main.cpp
lab7/: main.cpp
lab8/: benchmark.cpp  gen.py  main.cpp  test.txt
lab9/: benchmark.cpp  gen.py  main.cpp
